<resources>
    <string name="app_name">BirthdaysAhead</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profiles">Profiles</string>
    <string name="calendar">Calendar</string>
    <string name="profile_birthday">%1s\'s Birthday!</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="new_event">New Event</string>
    <string name="create_new_event">Create new event</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="type_of_event">Type of Event</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="gift_wishes">Gift wishes</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
</resources>